## Process this file with automake to produce Makefile.in
## $Id: $

SUBDIRS = \
  src \
	src/plugins \
	src/windows

noinst_HEADERS = \
	include/fuppes.h

include_HEADERS = \
	include/fuppes_plugin.h \
	include/fuppes_plugin_types.h

EXTRA_DIST = \
  README\
  COPYING\
	AUTHORS\
	ChangeLog\
	INSTALL\
	NEWS\
	TODO\
  THANKS\
	configure.in\
	Makefile.am\
	src/Makefile.am\
	src/plugins/Makefile.am\
  vfolder.cfg
