## Process this file with automake to produce Makefile.in
## $Id: $

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	m4 \
  src \
	src/plugins \
	src/windows

noinst_HEADERS = \
	include/fuppes.h

include_HEADERS = \
	include/fuppes_plugin.h \
	include/fuppes_plugin_types.h \
	include/fuppes_db_connection_plugin.h

EXTRA_DIST = \
  README \
  COPYING \
	AUTHORS \
	ChangeLog \
	INSTALL \
	NEWS \
	TODO \
  THANKS \
	configure.ac \
	Makefile.am \
	src/Makefile.am \
	src/plugins/Makefile.am \
	src/windows/Makefile.am \
	src/windows/fuppes.exe.Manifest \
	src/windows/fuppes.ico \	
  vfolder.cfg \
  crosscompile_win32.sh
