## Process this file with automake to produce Makefile.in
## $Id: $

include $(top_srcdir)/PreRules.am

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
  m4 \
  include \
  src \
  src/plugins \
  src/windows

EXTRA_DIST = \
  README \
  COPYING \
  AUTHORS \
  ChangeLog \
  INSTALL \
  NEWS \
  TODO \
  THANKS \
  configure.ac \
  Makefile.am \
  src/Makefile.am \
  src/plugins/Makefile.am \
  src/windows/Makefile.am \
  src/windows/fuppes.exe.Manifest \
  src/windows/fuppes.ico \
  include/Makefile.am \
  vfolder.cfg \
  crosscompile_win32.sh
